Some CSS applied, still need to fix alignment

--- a/css/index.css
+++ b/css/index.css
@@ -232,7 +232,20 @@ footer {
     height: 15vh;
     padding-top: 2.5vh;
     font-size: 3rem;
+    background-color: rgb(0, 4, 17);
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
+
+footer nav{
+    margin: 10px;
+    display: flex;
+    justify-content: flex-end;
+    align-items: flex-end;
+}
+
+
 
 /* mobile media query */
 @media (max-width: 428px) {
