--- a/css/menu.css
+++ b/css/menu.css
@@ -64,6 +64,7 @@ body {
 
 h1, h2, h3, h4, h5, h6, p, a, i {
     text-decoration: none;
+    color: rgb(225, 239, 230);
 }
 
 h1 {
@@ -96,6 +97,22 @@ header {
     background-repeat: no-repeat;
 }
 
+header div{
+    background-color: rgb(0, 4, 17, .8);
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+
+header nav{
+    width: 100%;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-evenly;
+    align-items: center;
+}
+
 /* spacer */
 .spacer {
     width: 100%;
@@ -118,6 +135,9 @@ header {
     background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 
 /* footer section */
@@ -126,6 +146,17 @@ footer {
     height: 15vh;
     padding-top: 2.5vh;
     font-size: 3rem;
+    background-color: rgb(0, 4, 17);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+footer nav{
+
+    display: flex;
+    justify-content: flex-end;
+    align-items: flex-end;
 }
 
 /* mobile media query */
